--- a/style.css
+++ b/style.css
@@ -1,72 +1,114 @@
 @import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Boldonse&family=Cinzel:wght@400..900&family=Lemon&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Russo+One&display=swap');
 
-body{
-color:#c6a974 ;
-background-color:#0c0c0c ;
-margin: 0px;
-margin-bottom: 100px;
+body {
+    color: #c6a974;
+    background-color: #0c0c0c;
+    margin: 0px;
+    margin-bottom: 100px;
+    font-family: 'Montserrat', sans-serif;
 }
 
-header{
-    border-bottom: solid 2px #a58e63 ;
+header {
+    border-bottom: solid 2px #a58e63;
     margin: 20px;
     font-size: 32px;
-    color: black;
+    color: #c6a974;
+    text-align: center;
+    padding-bottom: 10px;
 }
 
-section{    
-padding-bottom: 80px;
-padding-top: 80px;
-background: gray;
-display: flex;
-justify-content: center;
+section {    
+    padding-bottom: 80px;
+    padding-top: 80px;
+    background: #1a1a1a;
+    display: flex;
+    justify-content: center;
 }
 
-h1{
-color:#c6a974 ;
-font-size: 40px;
+h1 {
+    color: #c6a974;
+    font-size: 40px;
+    margin-bottom: 20px;
 }
 
-p{
+p {
     font-size: 20px;
+    margin: 10px 0;
 }
 
-.categoria{
-padding-left: 20px;
-padding-right: 20px;
-
+.categoria {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-bottom: 40px;
 }
 
 .categoria-videos {
     display: flex;
     overflow-x: auto;
-    gap: 10px;
+    gap: 20px;
+    padding: 20px 0;
 }
 
-img{
+.categoria-videos iframe {
+    min-width: 1230px;
+    height: 692px;
+    border: 2px solid #a58e63;
+}
+
+img {
     height: 200px;
+    transition: all 0.3s ease;
 }
 
-.categoria-videos img{
+.categoria-videos img {
     opacity: 0.5;
     height: 200px;
+    border-radius: 4px;
 }
 
-.categoria-videos img:hover{
-opacity:1.0;
-border: 3px solid #c6a974;
-
+.categoria-videos img:hover {
+    opacity: 1.0;
+    border: 3px solid #c6a974;
+    transform: scale(1.05);
 }
 
-.categoria h2{
-color: #a58e63;
-
+.categoria h2 {
+    color: #a58e63;
+    font-size: 28px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #a58e63;
+    padding-bottom: 5px;
 }
 
-.chamada-texto{
+.chamada-texto {
     margin-right: 1%;
     text-align: center;
     padding: 20px;
     background-color: #0c0c0c;
     color: #c6a974;
+    max-width: 800px;
+    border: 2px solid #a58e63;
+    border-radius: 8px;
+}
+
+/* Responsividade */
+@media (max-width: 1300px) {
+    .categoria-videos iframe {
+        min-width: 90%;
+        height: 500px;
+    }
+}
+
+@media (max-width: 768px) {
+    .categoria-videos iframe {
+        height: 300px;
+    }
+    
+    h1 {
+        font-size: 32px;
+    }
+    
+    .chamada-texto {
+        padding: 15px;
+    }
 }
